<resources>
    <string name="app_name">Bazaar Baba</string>
    <string name="app_label">Bazaar Baba</string>
    <string name="search_hint">Search for items</string>
    <string name="item_image_description">Photo of the item</string>
    <string name="item_name">Name</string>
    <string name="item_location">Shop Name</string>
    <string name="item_price">Price</string>
    <string name="button_pickup">Pick Up</string>
    <string name="button_delivery">Deliver</string>
    <string name="profile_delivery_charge">Delivery Charge</string>
    <string name="profile_delivery_explanation">Delivery charge does not apply if you select Pick Up</string>
    <string name="item_add_to_cart">"  Add to Cart  "</string>
    <string name="login_button">"  REGISTER  "</string>
    <string name="login_name">Name</string>
    <string name="login_phone_heading">Phone Number</string>
    <string name="login_address_hint">Hostel Name or Address</string>
    <string name="confirmation_thanks">Thank you for placing your order with us</string>
    <string name="confirmation_processing">Your order is being processed...</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main4">Main4Activity</string>
</resources>