<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="fill_parent"
tools:context=".Login">

<ImageView
    android:id="@+id/imageView"
    android:layout_width="0dp"
    android:layout_height="100dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/login_app_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="16dp"
    android:fontFamily="casual"
    android:text="@string/app_name"
    android:textAlignment="center"
    android:textColor="#BC000000"
    android:textSize="36sp"
    android:textStyle="bold|italic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />


<EditText
    android:id="@+id/login_name"
    android:layout_width="232dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="48dp"
    android:layout_marginEnd="16dp"
    android:ems="10"
    android:hint="@string/login_name"
    android:inputType="textPersonName"
    android:textSize="24sp"
    android:textStyle="italic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/login_app_name" />

<EditText
    android:id="@+id/login_phone_number"
    android:layout_width="232dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="36dp"
    android:layout_marginEnd="16dp"
    android:ems="10"
    android:hint="@string/login_phone_heading"
    android:inputType="phone"
    android:textSize="24sp"
    android:textStyle="italic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/login_name" />

<EditText
    android:id="@+id/login_address"
    android:layout_width="232dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="36dp"
    android:layout_marginEnd="16dp"
    android:ems="10"
    android:gravity="start|top"
    android:hint="@string/login_address_hint"
    android:inputType="textMultiLine"
    android:textSize="24sp"
    android:textStyle="italic"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/login_phone_number" />

<Button
    android:id="@+id/material_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="48dp"
    android:background="@drawable/modified_button"
    android:gravity="center"
    android:padding="8dp"
    android:text="@string/login_button"
    android:textSize="30sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/login_address" />

</androidx.constraintlayout.widget.ConstraintLayout>