<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/lay"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:app2="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav_view">

        <Button
            android:id="@+id/cart_pickup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/modified_button"
            android:text="@string/button_pickup"
            android:textSize="24sp"
            app2:layout_constraintBottom_toTopOf="@+id/cart_deliver_button"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cart_deliver_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/modified_button"
            android:text="@string/button_delivery"
            android:textSize="24sp"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cart_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/item_price"
            android:textSize="24sp"
            app2:layout_constraintBottom_toTopOf="@+id/cart_delivery_charge"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cart_delivery_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/profile_delivery_charge"
            android:textSize="24sp"
            app2:layout_constraintBottom_toTopOf="@+id/cart_pickup_button"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_viewcart"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app2:layout_constraintBottom_toTopOf="@+id/cart_price"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintTop_toBottomOf="@+id/lay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>